--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Главная страница</h1>
+        <header class="header">
+        <h1>Шапка проекта</h1>
+        </header>
+        
     </body>
 </html>
